# t42_gripper

./: README.md
t42_gripper/: CMakeLists.txt  package.xml
t42_gripper_bringup/: CMakeLists.txt  package.xml
t42_gripper_bringup/config/: controllers.yaml
t42_gripper_bringup/launch/: senseglove_2_gripper.launch.py  t42_gripper.launch.py
t42_gripper_controller/: package.xml  setup.cfg  setup.py
t42_gripper_controller/arduino/Master/: master.ino
t42_gripper_controller/arduino/Slave/: slave.ino
t42_gripper_controller/arduino/position_mode/: position_mode.ino
t42_gripper_controller/t42_gripper_controller/: adjust_offset.py  joint_sim_controller.py  position_controller.py  read_serial.py  test_motors.py  test_timing.py
t42_gripper_description/: CMakeLists.txt  package.xml
t42_gripper_description/meshes/: arduino_controller.stl  arduino_pc.stl
t42_gripper_description/rmpflow/: robot_descriptor.yaml
t42_gripper_description/urdf/: hand_T42.urdf  hand_T42.xacro  t42.ros2_control.xacro  t42_hand.xacro  t42_hand_macro.xacro
t42_gripper_hardware/: CMakeLists.txt  package.xml  t42_gripper_hardware.xml
t42_gripper_hardware/src/: hardware_interface.cpp
t42_gripper_moveit_config/: CMakeLists.txt  package.xml
t42_gripper_moveit_config/config/: controllers.yaml  kinematics.yaml  ompl_planning.yaml  t42_controller.yaml
t42_gripper_moveit_config/launch/: t42_moveit.launch.py
t42_gripper_moveit_config/rviz/: view_robot.rviz
t42_gripper_moveit_config/srdf/: t42.srdf  t42.srdf.xacro  t42_macro.srdf.xacro
(+5 files in other folders)
