<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>t42_gripper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2330834a@student.gla.ac.uk">ubb</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>t42_gripper_moveit_config</exec_depend>
  <exec_depend>t42_gripper_description</exec_depend>
  <exec_depend>t42_gripper_bringup</exec_depend>
  <exec_depend>t42_gripper_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
